--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=local,src=/cache
+          cache-to: type=local,dest=/cache,mode=max
           platforms: linux/amd64,linux/arm64
 
