--- a/.gitea/workflows/build.yml
+++ b/.gitea/workflows/build.yml
@@ -44,5 +44,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/cache
           cache-to: type=local,dest=/cache,mode=max
-          platforms: linux/amd64,linux/arm64
+          # platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
 
