--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
     "nanoid": "^5.1.6",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "uuid": "^13.0.0"
