--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -42,8 +42,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=local,src=/cache
-          cache-to: type=local,dest=/cache,mode=max
+          cache-from: type=registry,ref=${{ secrets.REGISTRY_ENDPOINT }}/${{ github.repository_owner }}/litek:buildcache
+          cache-to: type=registry,ref=${{ secrets.REGISTRY_ENDPOINT }}/${{ github.repository_owner }}/litek:buildcache,mode=max
           # platforms: linux/amd64,linux/arm64
           platforms: linux/amd64
 
