--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "release:major": "npm version major && git push --follow-tags"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-separator": "^1.1.7",
