--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -43,6 +43,10 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            VITE_WEBDAV_URL=${{ secrets.VITE_WEBDAV_URL }}
+            VITE_WEBDAV_USERNAME=${{ secrets.VITE_WEBDAV_USERNAME }}
+            VITE_WEBDAV_PASSWORD=${{ secrets.VITE_WEBDAV_PASSWORD }}
           # cache-from: type=registry,ref=${{ secrets.REGISTRY_ENDPOINT }}/${{ github.repository_owner }}/litek:buildcache
           # cache-to: type=registry,ref=${{ secrets.REGISTRY_ENDPOINT }}/${{ github.repository_owner }}/litek:buildcache,mode=max
           # platforms: linux/amd64,linux/arm64
