--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "idb": "^8.0.3",
     "lucide-react": "^0.548.0",
     "nanoid": "^5.1.6",
     "next-themes": "^0.4.6",
