refactor: update Dockerfile to use secret mount for VITE_WEBDAV_PASSWORD
- Changed the way VITE_WEBDAV_PASSWORD is handled during the build process by using a secret mount instead of an environment variable.
- Updated build.yaml to pass VITE_WEBDAV_PASSWORD as a secret, enhancing security during the build.

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -46,6 +46,7 @@ jobs:
           build-args: |
             VITE_WEBDAV_URL=${{ secrets.VITE_WEBDAV_URL }}
             VITE_WEBDAV_USERNAME=${{ secrets.VITE_WEBDAV_USERNAME }}
+          secrets: |
             VITE_WEBDAV_PASSWORD=${{ secrets.VITE_WEBDAV_PASSWORD }}
           # cache-from: type=registry,ref=${{ secrets.REGISTRY_ENDPOINT }}/${{ github.repository_owner }}/litek:buildcache
           # cache-to: type=registry,ref=${{ secrets.REGISTRY_ENDPOINT }}/${{ github.repository_owner }}/litek:buildcache,mode=max
