feat: enhance build workflow with version input
- Added a `workflow_dispatch` trigger to allow manual execution of the build workflow with an optional version input.
- Updated the checkout step to use the specified version input or fallback to the current Git reference.
- Modified the deploy step to utilize the version input for the image tag, improving flexibility in deployment.

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -4,6 +4,12 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: '版本标签 (例如: v1.0.0)'
+        required: false
+        type: string
 
 jobs:
   build:
@@ -12,6 +18,8 @@ jobs:
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.version || github.ref }}
         
       - name: 设置 Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -58,5 +66,5 @@ jobs:
         with:
           workflow: deploy.yaml
           token: ${{ secrets.GITHUB_TOKEN }}
-          inputs: '{"image_tag": "${{ github.ref_name }}"}'
+          inputs: '{"image_tag": "${{ inputs.version || github.ref_name }}"}'
 
