--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
     gzip_proxied any;
     gzip_comp_level 6;
     gzip_types text/plain text/css text/xml text/javascript 
-               application/json application/javascript application/xml+rss 
+               application/json application/manifest+json application/javascript application/xml+rss 
                application/rss+xml font/truetype font/opentype 
                application/vnd.ms-fontobject image/svg+xml;
 
@@ -43,6 +43,13 @@ http {
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
+
+        # Manifest 文件缓存（PWA manifest，可能会更新所以使用较短缓存）
+        location = /manifest.json {
+            expires 7d;
+            add_header Cache-Control "public";
+            add_header Content-Type "application/manifest+json";
+        }
 
         # 静态资源缓存
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
