--- a/nginx.conf
+++ b/nginx.conf
@@ -23,11 +23,15 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
 
-    # 压缩配置说明：
-    # 由于应用通过 Caddy 反向代理部署，压缩应由 Caddy 统一处理。
-    # 关闭 nginx 的压缩功能，避免双重压缩浪费 CPU 资源。
-    # 同时，Caddy 会根据客户端支持情况自动选择最佳压缩算法（gzip/brotli）。
-    gzip off;
+    # Gzip 压缩配置
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript 
+               application/json application/manifest+json application/javascript application/xml+rss 
+               application/rss+xml font/truetype font/opentype 
+               application/vnd.ms-fontobject image/svg+xml;
 
     server {
         listen 80;
